@@ -226,11 +226,13 @@
         // LDAP stands for light directory access protocol. its what many larger orgs use for central user/password management. Its also the core technology behind windows active directory.
         // If you have an ldap server, you can configure X3 to use it instead of saving passwords locally.
         //"ldap_enable" "1";
-        //"ldap_host" "ldap.yourdomain.com"
-        //"ldap_port" "683"
-        //"ldap_base" "ou=Users,dc=afternet,dc=org"
-        //"ldap_dn_fmt" "uid=%s,ou=Users,dc=afternet,dc=org"
-        //"ldap_autocreate" "0"; // automatically create accounts if they exist in ldap but not x3
+        //"ldap_host" "ldap.yourdomain.com";
+        // port defaults to ldap default 389 if left commented
+        //"ldap_port" "389";
+        //"ldap_base" "ou=Users,dc=yournet,dc=org";
+        //"ldap_dn_fmt" "uid=%s,ou=Users,dc=afternet,dc=org";
+        // automatically create accounts if they exist in ldap but not x3
+        //"ldap_autocreate" "1"; 
     };
 
     /* 
